sophons/apps/woodpecker/namespace.yaml
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/v1.34.1/namespace.json
apiVersion: v1
kind: Namespace
metadata:
  name: woodpecker-system
  labels:
    pod-security.kubernetes.io/enforce: privileged
