sophons/apps/woodpecker/httproute.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/nlamirault/schema-hub/main/schemas/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: birb
  namespace: woodpecker-system
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Self-hosted CI/CD
    gethomepage.dev/group: Code & Packages
    gethomepage.dev/icon: woodpecker-ci.svg
    gethomepage.dev/name: Woodpecker
    gethomepage.dev/app: server
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure

  hostnames:
    - ic.vrtx.sh
    - ci.sophons.cloud

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /.identity/api

    - matches:
        - path:
            type: PathPrefix
            value: /.identity
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: ci-identity
          port: 80

    - backendRefs:
        - name: birb-server
          port: 80
